--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 
             <h2>Sunny Play</h2>
 
-            <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span></span>°F at our pet playground.
+            <p>Our center is located in beautiful Miami, and it&rsquo;s currently <span
+                id="temperature-output"></span>°F at our pet playground.
             </p>
           </div>
           <div class="intro-feature">
@@ -173,6 +174,7 @@
   <footer class="site-footer">
     <p>&copy; 2023 Fake Adoption Center. All rights reserved!!!</p>
   </footer>
+  <script src="main.js"></script>
 </body>
 
 </html>
