--- a/index.html
+++ b/index.html
@@ -127,12 +127,11 @@
         <div class="pet-card">
           <div class="pet-card-text">
             <h3></h3>
-            <p class="pet-description">Barksalot is a sweet and lovable 3 year old ball of fluff. He loves carrots,
-              celery, and playing fetch.</p>
-            <p class="pet-age">2 Years Old</p>
+            <p class="pet-description"></p>
+            <p class="pet-age"></p>
           </div>
           <div class="pet-card-photo">
-            <img src="images/barksalot.jpg" alt="A white fluffy dog named Barskalot">
+            <img src="" alt="">
           </div>
         </div>
       </template>
