--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
     <div class="page-section-inner">
       <h2 class="page-section-title">Meet Our Friends</h2>
       <div class="pet-filter">
-        <p>Show me: <button class="active">All Pets</button> <button>Only Dogs</button> <button>Only Cats</button></p>
+        <p>Show me: <button class="active" data-filter="all">All Pets</button> <button data-filter="dog">Only
+            Dogs</button> <button data-filter="cat">Only Cats</button></p>
       </div>
 
       <div class="list-of-pets"></div>
